--- a/apps/templates/argo-cd.yaml
+++ b/apps/templates/argo-cd.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     path: charts/argo-cd
-    repoURL: https://github.com/arthurk/argocd-example-install.git
+    repoURL: https://github.com/F4talny/agroCD.git
     targetRevision: HEAD
   syncPolicy:
     automated:
