--- a/apps/templates/echo.yaml
+++ b/apps/templates/echo.yaml
@@ -17,7 +17,7 @@ spec:
         service:
           type: NodePort
         
-    repoURL: https://github.com/Ealenn/Echo-Server
+    repoURL: https://artifacthub.io/packages/helm/ealenn/echo-server
     targetRevision: 0.4.0
   syncPolicy:
     automated:
