--- a/apps/templates/echo.yaml
+++ b/apps/templates/echo.yaml
@@ -11,14 +11,9 @@ spec:
     namespace: default
   project: default
   source:
-    chart: ealenn/echo-server
-    helm:
-      values: |
-        service:
-          type: NodePort
-        
-    repoURL: https://artifacthub.io/packages/helm/ealenn/echo-server
-    targetRevision: 0.3.1
+    chart: ealenn/echo-server    
+    repoURL: https://ealenn.github.io/charts
+    targetRevision: 0.4.0
   syncPolicy:
     automated:
       prune: true
