--- a/apps/templates/prometheus.yaml
+++ b/apps/templates/prometheus.yaml
@@ -1,8 +1,8 @@
-
 # apiVersion: argoproj.io/v1alpha1
 # kind: Application
 # metadata:
-#   name: root
+#   name: prometheus
+#   namespace: default
 #   finalizers:
 #   - resources-finalizer.argocd.argoproj.io
 # spec:
@@ -11,9 +11,13 @@
 #     namespace: default
 #   project: default
 #   source:
-#     path: apps/
-#     repoURL: https://github.com/F4talny/agroCD.git
-#     targetRevision: HEAD
+#     chart: prometheus
+#     helm:
+#       values: |
+#         pushgateway:
+#           enabled: false
+#     repoURL: https://prometheus-community.github.io/helm-charts
+#     targetRevision: 15.6.0
 #   syncPolicy:
 #     automated:
 #       prune: true
