--- a/apps/templates/echo.yaml
+++ b/apps/templates/echo.yaml
@@ -1,20 +1,20 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: echo-server
-#   namespace: default
-#   finalizers:
-#   - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     server: https://kubernetes.default.svc
-#     namespace: default
-#   project: default
-#   source:
-#     chart: echo-server   
-#     repoURL: https://ealenn.github.io/charts
-#     targetRevision: 0.4.0
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: echo-server
+  namespace: default
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default
+  project: default
+  source:
+    chart: echo-server   
+    repoURL: https://ealenn.github.io/charts
+    targetRevision: 0.4.0
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
